foo_lang/parser/foo_langParser.py
# $ANTLR 3.1 foo_lang/parser/foo_lang.g 2014-02-04 23:15:40

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *

         
from foo_lang import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
T__68=68
T__69=69
APPLY=22
T__66=66
EXTERNAL=6
LT=48
T__67=67
T__64=64
T__65=65
MOD=56
CONST=5
ANNOTATION=19
LBRACE=40
LTEQ=49
CASE=26
CASES=25
ANON_FUNC_DECL=9
SUB=43
EQUALS=46
FLOAT=35
NOT=57
ATOM=24
AND=45
EOF=-1
LPAREN=37
TYPE=27
FUNC_CALL=10
IF=16
LBRACKET=59
RPAREN=38
TUPLE=29
INC=21
EXTEND=15
IMPORT=14
OBJECT=7
COMMA=39
IDENTIFIER=61
ANNOTATED=20
PLUS=52
VAR=18
RBRACKET=60
COMMENT=62
DOT=32
ADD=42
INTEGER=36
T__80=80
T__81=81
RBRACE=41
T__82=82
T__83=83
ON=23
NOTEQUALS=47
UNDERSCORE=58
MULT=54
MINUS=53
GTEQ=51
VALUE=30
T__85=85
T__84=84
LIST=12
T__87=87
ROOT=4
METHOD_CALL=11
T__86=86
DOMAIN=31
MANY=28
FUNC_DECL=8
COLON=33
WS=63
T__71=71
T__72=72
T__70=70
PROPERTY=13
BLOCK=17
OR=44
ASSIGN=34
GT=50
DIV=55
T__76=76
T__75=75
T__74=74
T__73=73
T__79=79
T__78=78
T__77=77

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "ROOT", "CONST", "EXTERNAL", "OBJECT", "FUNC_DECL", "ANON_FUNC_DECL", 
    "FUNC_CALL", "METHOD_CALL", "LIST", "PROPERTY", "IMPORT", "EXTEND", 
    "IF", "BLOCK", "VAR", "ANNOTATION", "ANNOTATED", "INC", "APPLY", "ON", 
    "ATOM", "CASES", "CASE", "TYPE", "MANY", "TUPLE", "VALUE", "DOMAIN", 
    "DOT", "COLON", "ASSIGN", "FLOAT", "INTEGER", "LPAREN", "RPAREN", "COMMA", 
    "LBRACE", "RBRACE", "ADD", "SUB", "OR", "AND", "EQUALS", "NOTEQUALS", 
    "LT", "LTEQ", "GT", "GTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "NOT", 
    "UNDERSCORE", "LBRACKET", "RBRACKET", "IDENTIFIER", "COMMENT", "WS", 
    "'@'", "'with'", "'do'", "'const'", "'before'", "'after'", "'function'", 
    "'return'", "'++'", "'if'", "'else'", "'case'", "'from'", "'import'", 
    "'extend'", "'true'", "'false'", "'#'", "'byte'", "'integer'", "'float'", 
    "'boolean'", "'timestamp'", "'use'"
]




class foo_langParser(Parser):
    grammarFileName = "foo_lang/parser/foo_lang.g"
    antlr_version = version_str_to_tuple("3.1")
    antlr_version_str = "3.1"
    tokenNames = tokenNames

    def __init__(self, input, state=None):
        if state is None:
            state = RecognizerSharedState()

        Parser.__init__(self, input, state)


        self.dfa13 = self.DFA13(
            self, 13,
            eot = self.DFA13_eot,
            eof = self.DFA13_eof,
            min = self.DFA13_min,
            max = self.DFA13_max,
            accept = self.DFA13_accept,
            special = self.DFA13_special,
            transition = self.DFA13_transition
            )

        self.dfa27 = self.DFA27(
            self, 27,
            eot = self.DFA27_eot,
            eof = self.DFA27_eof,
            min = self.DFA27_min,
            max = self.DFA27_max,
            accept = self.DFA27_accept,
            special = self.DFA27_special,
            transition = self.DFA27_transition
            )






                
        self._adaptor = CommonTreeAdaptor()


        
    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)

                      
    def getMissingSymbol(self, input, e, expectedTokenType, follow):
      # TODO: raise better exception -> RecognitionException?
      #raise RuntimeError("expecting different input...")
      print "Expected:", self.tokenNames[expectedTokenType], \
            "after", self.getCurrentInputSymbol(input)
      sys.exit(1)


    class start_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "start"
    # foo_lang/parser/foo_lang.g:51:1: start : ( instructions )? EOF -> ^( ROOT ( instructions )? ) ;
    def start(self, ):

        retval = self.start_return()
        retval.start = self.input.LT(1)

        root_0 = None

        EOF2 = None
        instructions1 = None


        EOF2_tree = None
        stream_EOF = RewriteRuleTokenStream(self._adaptor, "token EOF")
        stream_instructions = RewriteRuleSubtreeStream(self._adaptor, "rule instructions")
        try:
            try:
                # foo_lang/parser/foo_lang.g:51:7: ( ( instructions )? EOF -> ^( ROOT ( instructions )? ) )
                # foo_lang/parser/foo_lang.g:51:9: ( instructions )? EOF
                pass 
                # foo_lang/parser/foo_lang.g:51:9: ( instructions )?
                alt1 = 2
                LA1_0 = self.input.LA(1)

                if (LA1_0 == 64 or (67 <= LA1_0 <= 70) or LA1_0 == 76 or LA1_0 == 78) :
                    alt1 = 1
                elif (LA1_0 == EOF) :
                    LA1_2 = self.input.LA(2)

                    if (self.synpred1_foo_lang()) :
                        alt1 = 1
                if alt1 == 1:
                    # foo_lang/parser/foo_lang.g:0:0: instructions
                    pass 
                    self._state.following.append(self.FOLLOW_instructions_in_start178)
                    instructions1 = self.instructions()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_instructions.add(instructions1.tree)



                EOF2=self.match(self.input, EOF, self.FOLLOW_EOF_in_start181) 
                if self._state.backtracking == 0:
                    stream_EOF.add(EOF2)

                # AST Rewrite
                # elements: instructions
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 51:27: -> ^( ROOT ( instructions )? )
                    # foo_lang/parser/foo_lang.g:51:30: ^( ROOT ( instructions )? )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(ROOT, "ROOT"), root_1)

                    # foo_lang/parser/foo_lang.g:51:37: ( instructions )?
                    if stream_instructions.hasNext():
                        self._adaptor.addChild(root_1, stream_instructions.nextTree())


                    stream_instructions.reset();

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                        
            except RecognitionException, e:
              raise
        finally:

            pass

        return retval

    # $ANTLR end "start"

    class instructions_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "instructions"
    # foo_lang/parser/foo_lang.g:52:1: instructions : ( instruction )* ;
    def instructions(self, ):

        retval = self.instructions_return()
        retval.start = self.input.LT(1)

        root_0 = None

        instruction3 = None



        try:
            try:
                # foo_lang/parser/foo_lang.g:52:14: ( ( instruction )* )
                # foo_lang/parser/foo_lang.g:52:16: ( instruction )*
                pass 
                root_0 = self._adaptor.nil()

                # foo_lang/parser/foo_lang.g:52:16: ( instruction )*
                while True: #loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == 64 or (67 <= LA2_0 <= 70) or LA2_0 == 76 or LA2_0 == 78) :
                        alt2 = 1


                    if alt2 == 1:
                        # foo_lang/parser/foo_lang.g:52:17: instruction
                        pass 
                        self._state.following.append(self.FOLLOW_instruction_in_instructions198)
                        instruction3 = self.instruction()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            self._adaptor.addChild(root_0, instruction3.tree)


                    else:
                        break #loop2





                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                        
            except RecognitionException, e:
              raise
        finally:

            pass

        return retval

    # $ANTLR end "instructions"

    class instruction_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "instruction"
    # foo_lang/parser/foo_lang.g:53:1: instruction : ( declaration | directive | extension );
    def instruction(self, ):

        retval = self.instruction_return()
        retval.start = self.input.LT(1)

        root_0 = None

        declaration4 = None

        directive5 = None

        extension6 = None



        try:
            try:
                # foo_lang/parser/foo_lang.g:54:3: ( declaration | directive | extension )
                alt3 = 3
                LA3 = self.input.LA(1)
                if LA3 == 64 or LA3 == 67 or LA3 == 68 or LA3 == 69 or LA3 == 70:
                    alt3 = 1
                elif LA3 == 76:
                    alt3 = 2
                elif LA3 == 78:
                    alt3 = 3
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed

                    nvae = NoViableAltException("", 3, 0, self.input)

                    raise nvae

                if alt3 == 1:
                    # foo_lang/parser/foo_lang.g:54:5: declaration
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_declaration_in_instruction209)
                    declaration4 = self.declaration()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, declaration4.tree)


                elif alt3 == 2:
                    # foo_lang/parser/foo_lang.g:55:5: directive
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_directive_in_instruction215)
                    directive5 = self.directive()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, directive5.tree)


                elif alt3 == 3:
                    # foo_lang/parser/foo_lang.g:56:5: extension
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_extension_in_instruction221)
                    extension6 = self.extension()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, extension6.tree)


                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                        
            except RecognitionException, e:
              raise
        finally:

            pass

        return retval

    # $ANTLR end "instruction"

    class declaration_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "declaration"
    # foo_lang/parser/foo_lang.g:61:1: declaration : ( annotated_declaration | constant_declaration | event_handler_declaration | function_declaration );
    def declaration(self, ):

        retval = self.declaration_return()
        retval.start = self.input.LT(1)

        root_0 = None

        annotated_declaration7 = None

        constant_declaration8 = None

        event_handler_declaration9 = None

        function_declaration10 = None



        try:
            try:
                # foo_lang/parser/foo_lang.g:62:3: ( annotated_declaration | constant_declaration | event_handler_declaration | function_declaration )
                alt4 = 4
                LA4 = self.input.LA(1)
                if LA4 == 64:
                    alt4 = 1
                elif LA4 == 67:
                    alt4 = 2
                elif LA4 == 68 or LA4 == 69:
                    alt4 = 3
                elif LA4 == 70:
                    alt4 = 4
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed

                    nvae = NoViableAltException("", 4, 0, self.input)

                    raise nvae

                if alt4 == 1:
                    # foo_lang/parser/foo_lang.g:62:5: annotated_declaration
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_annotated_declaration_in_declaration236)
                    annotated_declaration7 = self.annotated_declaration()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, annotated_declaration7.tree)


                elif alt4 == 2:
                    # foo_lang/parser/foo_lang.g:63:5: constant_declaration
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_constant_declaration_in_declaration242)
                    constant_declaration8 = self.constant_declaration()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, constant_declaration8.tree)


                elif alt4 == 3:
                    # foo_lang/parser/foo_lang.g:64:5: event_handler_declaration
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_event_handler_declaration_in_declaration248)
                    event_handler_declaration9 = self.event_handler_declaration()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, event_handler_declaration9.tree)


                elif alt4 == 4:
                    # foo_lang/parser/foo_lang.g:65:5: function_declaration
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_function_declaration_in_declaration254)
                    function_declaration10 = self.function_declaration()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, function_declaration10.tree)


                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                        
            except RecognitionException, e:
              raise
        finally:

            pass

        return retval

    # $ANTLR end "declaration"

    class annotated_declaration_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "annotated_declaration"
    # foo_lang/parser/foo_lang.g:68:1: annotated_declaration : annotation apply_declaration -> ^( ANNOTATED annotation apply_declaration ) ;
    def annotated_declaration(self, ):

        retval = self.annotated_declaration_return()
        retval.start = self.input.LT(1)

        root_0 = None

        annotation11 = None

        apply_declaration12 = None


        stream_annotation = RewriteRuleSubtreeStream(self._adaptor, "rule annotation")
        stream_apply_declaration = RewriteRuleSubtreeStream(self._adaptor, "rule apply_declaration")
        try:
            try:
                # foo_lang/parser/foo_lang.g:69:3: ( annotation apply_declaration -> ^( ANNOTATED annotation apply_declaration ) )
                # foo_lang/parser/foo_lang.g:69:5: annotation apply_declaration
                pass 
                self._state.following.append(self.FOLLOW_annotation_in_annotated_declaration267)
                annotation11 = self.annotation()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_annotation.add(annotation11.tree)
                self._state.following.append(self.FOLLOW_apply_declaration_in_annotated_declaration269)
                apply_declaration12 = self.apply_declaration()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_apply_declaration.add(apply_declaration12.tree)

                # AST Rewrite
                # elements: annotation, apply_declaration
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 69:34: -> ^( ANNOTATED annotation apply_declaration )
                    # foo_lang/parser/foo_lang.g:69:37: ^( ANNOTATED annotation apply_declaration )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(ANNOTATED, "ANNOTATED"), root_1)

                    self._adaptor.addChild(root_1, stream_annotation.nextTree())
                    self._adaptor.addChild(root_1, stream_apply_declaration.nextTree())

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                        
            except RecognitionException, e:
              raise
        finally:

            pass

        return retval

    # $ANTLR end "annotated_declaration"

    class annotation_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "annotation"
    # foo_lang/parser/foo_lang.g:72:1: annotation : '@' function_call_expression -> ^( ANNOTATION function_call_expression ) ;
    def annotation(self, ):

        retval = self.annotation_return()
        retval.start = self.input.LT(1)

        root_0 = None

        char_literal13 = None
        function_call_expression14 = None


        char_literal13_tree = None
        stream_64 = RewriteRuleTokenStream(self._adaptor, "token 64")
        stream_function_call_expression = RewriteRuleSubtreeStream(self._adaptor, "rule function_call_expression")
        try:
            try:
                # foo_lang/parser/foo_lang.g:73:3: ( '@' function_call_expression -> ^( ANNOTATION function_call_expression ) )
                # foo_lang/parser/foo_lang.g:73:5: '@' function_call_expression
                pass 
                char_literal13=self.match(self.input, 64, self.FOLLOW_64_in_annotation292) 
                if self._state.backtracking == 0:
                    stream_64.add(char_literal13)
                self._state.following.append(self.FOLLOW_function_call_expression_in_annotation294)
                function_call_expression14 = self.function_call_expression()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_function_call_expression.add(function_call_expression14.tree)

                # AST Rewrite
                # elements: function_call_expression
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 73:34: -> ^( ANNOTATION function_call_expression )
                    # foo_lang/parser/foo_lang.g:73:37: ^( ANNOTATION function_call_expression )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(ANNOTATION, "ANNOTATION"), root_1)

                    self._adaptor.addChild(root_1, stream_function_call_expression.nextTree())

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                        
            except RecognitionException, e:
              raise
        finally:

            pass

        return retval

    # $ANTLR end "annotation"

    class apply_declaration_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "apply_declaration"
    # foo_lang/parser/foo_lang.g:76:1: apply_declaration : ( 'with' identifier DOT identifier 'do' function_expression -> ^( APPLY ^( PROPERTY identifier identifier ) function_expression ) | 'with' identifier 'do' function_expression -> ^( APPLY ^( DOMAIN identifier ) function_expression ) );
    def apply_declaration(self, ):

        retval = self.apply_declaration_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal15 = None
        DOT17 = None
        string_literal19 = None
        string_literal21 = None
        string_literal23 = None
        identifier16 = None

        identifier18 = None

        function_expression20 = None

        identifier22 = None

        function_expression24 = None


        string_literal15_tree = None
        DOT17_tree = None
        string_literal19_tree = None
        string_literal21_tree = None
        string_literal23_tree = None
        stream_66 = RewriteRuleTokenStream(self._adaptor, "token 66")
        stream_DOT = RewriteRuleTokenStream(self._adaptor, "token DOT")
        stream_65 = RewriteRuleTokenStream(self._adaptor, "token 65")
        stream_function_expression = RewriteRuleSubtreeStream(self._adaptor, "rule function_expression")
        stream_identifier = RewriteRuleSubtreeStream(self._adaptor, "rule identifier")
        try:
            try:
                # foo_lang/parser/foo_lang.g:77:3: ( 'with' identifier DOT identifier 'do' function_expression -> ^( APPLY ^( PROPERTY identifier identifier ) function_expression ) | 'with' identifier 'do' function_expression -> ^( APPLY ^( DOMAIN identifier ) function_expression ) )
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if (LA5_0 == 65) :
                    LA5_1 = self.input.LA(2)

                    if (LA5_1 == IDENTIFIER or LA5_1 == 65 or (76 <= LA5_1 <= 78) or LA5_1 == 87) :
                        LA5_2 = self.input.LA(3)

                        if (LA5_2 == DOT) :
                            alt5 = 1
                        elif (LA5_2 == 66) :
                            alt5 = 2
                        else:
                            if self._state.backtracking > 0:
                                raise BacktrackingFailed

                            nvae = NoViableAltException("", 5, 2, self.input)

                            raise nvae

                    else:
                        if self._state.backtracking > 0:
                            raise BacktrackingFailed

                        nvae = NoViableAltException("", 5, 1, self.input)

                        raise nvae

                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed

                    nvae = NoViableAltException("", 5, 0, self.input)

                    raise nvae

                if alt5 == 1:
                    # foo_lang/parser/foo_lang.g:77:5: 'with' identifier DOT identifier 'do' function_expression
                    pass 
                    string_literal15=self.match(self.input, 65, self.FOLLOW_65_in_apply_declaration315) 
                    if self._state.backtracking == 0:
                        stream_65.add(string_literal15)
                    self._state.following.append(self.FOLLOW_identifier_in_apply_declaration317)
                    identifier16 = self.identifier()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_identifier.add(identifier16.tree)
                    DOT17=self.match(self.input, DOT, self.FOLLOW_DOT_in_apply_declaration319) 
                    if self._state.backtracking == 0:
                        stream_DOT.add(DOT17)
                    self._state.following.append(self.FOLLOW_identifier_in_apply_declaration321)
                    identifier18 = self.identifier()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_identifier.add(identifier18.tree)
                    string_literal19=self.match(self.input, 66, self.FOLLOW_66_in_apply_declaration323) 
                    if self._state.backtracking == 0:
                        stream_66.add(string_literal19)
                    self._state.following.append(self.FOLLOW_function_expression_in_apply_declaration325)
                    function_expression20 = self.function_expression()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_function_expression.add(function_expression20.tree)
